--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ reqwest = { version = "0.11", features = ["blocking", "json"] }
 tokio = { version = "1", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.0"
+log = "0.4.14"
+env_logger = "0.9.0"
